--- a/aulas/prog.web_js/aula20/style.css
+++ b/aulas/prog.web_js/aula20/style.css
@@ -63,6 +63,7 @@ main {
     width: 100%;
     margin-bottom: 10px;
     box-shadow: 0 0 20px #ccc;
+    cursor: pointer;
 }
 
 .item.clicado {
@@ -107,6 +108,7 @@ main {
     padding: 10px;
     height: 80px;
     width: 100%;
+    cursor: pointer;
 }
 
 .mdi-check-circle {
