--- a/aulas/rocketseat/projeto/style.css
+++ b/aulas/rocketseat/projeto/style.css
@@ -5,13 +5,15 @@ body {
     background-size: cover; */
 
     background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
+}    
     
-    #container {   
-        height: 712px;
-        width: 360px;
-        border: 1px solid yellow;
-        
-    }
-
-
+#container {  
+    
+    margin: auto;
+    height: 712px;
+    width: 360px;
+    border: 1px solid yellow;
+    
 }
+
+
