--- a/aulas/rocketseat/projeto/style.css
+++ b/aulas/rocketseat/projeto/style.css
@@ -1,19 +1,68 @@
-body {
-    /* background-image: url(./assets/bg-mobile.jpg);
-    background-repeat: no-repeat;
-    background-position: top center;
-    background-size: cover; */
+* {
+    margin: 0px;
+    padding: 0px;
+}
 
+body {
     background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
 }    
+
+body * {
+    font-family: "Inter", sans-serif;
+    color: #ffffff;
+}
     
-#container {  
-    
-    margin: auto;
-    height: 712px;
+#container {
     width: 360px;
-    border: 1px solid yellow;
-    
+    margin: 56px auto 0px;   
+}
+
+#profile {
+    text-align: center;
+    padding: 24px;
+}
+
+#profile img {
+    width: 112px;
+    display: block;
+    margin: auto;
+}
+
+#profile p {
+    font-weight: 500px;
+    line-height: 24px;
+    margin-top: 8px;
+}
+
+ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding: 0px 24px;
+}
+
+ul li a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 16px 24px;
+
+    background: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 8px;
+    -webkit-backdrop-filter: blur(4px);
+
+    text-decoration: none;
+    font-weight: 500;
+
+    transition: background-color 0.3s;
+}
+
+ul li a:hover {
+    background-color: rgba(255, 255, 255, 0.05);
+    border: 1.5px solid white;
 }
 
 
