--- a/aulas/rocketseat/projeto/style.css
+++ b/aulas/rocketseat/projeto/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
+    background: url(./assets/bg-mobile.jpg) no-repeat top center / cover;
 }    
 
 body * {
@@ -29,7 +29,7 @@ body * {
 }
 
 #profile p {
-    font-weight: 500px;
+    font-weight: 500;
     line-height: 24px;
     margin-top: 8px;
 }
@@ -39,7 +39,7 @@ ul {
     display: flex;
     flex-direction: column;
     gap: 16px;
-    padding: 0px 24px;
+    padding: 24px 0px;
 }
 
 ul li a{
@@ -52,7 +52,7 @@ ul li a{
     background: rgba(255, 255, 255, 0.1);
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-radius: 8px;
-    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px);
 
     text-decoration: none;
     font-weight: 500;
@@ -64,5 +64,33 @@ ul li a:hover {
     background-color: rgba(255, 255, 255, 0.05);
     border: 1.5px solid white;
 }
+
+#social-links {
+    display: flex;
+    justify-content: center;
+    padding: 24px 0px;
+    font-size: 24px;        
+}
+
+#social-links a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+    transition: background 0.2s;
+    border-radius: 50%;
+}
+
+#social-links a:hover {
+    background: rgba(255, 255, 255, 0.2);    
+}
+
+footer {
+    padding: 24px 0px;
+    text-align: center;
+    font-size: 14px;
+}
+
+
 
 
