--- a/aulas/rocketseat/projeto/style.css
+++ b/aulas/rocketseat/projeto/style.css
@@ -35,8 +35,10 @@ body * {
 }
     
 #container {
-    width: 360px;
-    margin: 56px auto 0px;   
+    width: 100%;
+    max-width: 588px;
+    margin: 56px auto 0px; 
+    padding: 0 24px;
 }
 
 #profile {
@@ -101,6 +103,7 @@ ul {
     gap: 16px;
     padding: 24px 0px;
 }
+
 
 ul li a{
     display: flex;
